@@ -1,5 +1,5 @@
 /****************************************************************************
- * arch/z8encore000zco/iclude/board.h
+ * arch/z8encore000zco/include/board.h
  *
  *   Copyright (C) 2008 Gregory Nutt. All rights reserved.
  *   Author: Gregory Nutt <spudmonkey@racsa.co.cr>
