@@ -1,5 +1,5 @@
 /****************************************************************************/
-/* configs/z8f4200100kit/ostest/ostest.linkcmd                             */
+/* configs/z8f64200100kit/ostest/ostest.linkcmd                             */
 /*                                                                          */
 /*   Copyright (C) 2008 Gregory Nutt. All rights reserved.                  */
 /*   Author: Gregory Nutt <spudmonkey@racsa.co.cr>                          */
